--- a/leisure/src/main/resources/templates/duvidas.html
+++ b/leisure/src/main/resources/templates/duvidas.html
@@ -5,6 +5,8 @@
 
 <body>
 
+    <div th:replace="~{fragments/loading :: loading}"></div>
+
     <!-- CABEÇALHO -->
     <header th:replace="~{fragments/cabecalho :: cabecalho}"></header>
 
