--- a/leisure/src/main/resources/templates/premium.html
+++ b/leisure/src/main/resources/templates/premium.html
@@ -4,6 +4,9 @@
 <head th:replace="~{fragments/head :: head}"></head>
 
 <body>
+
+    <div th:replace="~{fragments/loading :: loading}"></div>
+
     <!-- CABEÇALHO -->
     <header th:replace="~{fragments/cabecalho :: cabecalho}"></header>
     
