--- a/leisure/src/main/resources/static/style/edicaoImovel.css
+++ b/leisure/src/main/resources/static/style/edicaoImovel.css
@@ -33,9 +33,25 @@
     align-items: center;
 }
 
+.editar__anuncio__card__imagem span {
+    /* display: flex;
+    align-items: center; */
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    position: absolute;
+    z-index: 99;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 5px 5px 5px rgba(255, 255, 255, 1);
+    cursor: pointer;
+}
+
 .editar__anuncio__card img {
     width: 100%;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .editar__anuncio__card__valores {
