--- a/leisure/src/main/resources/static/style/index-carrossel.css
+++ b/leisure/src/main/resources/static/style/index-carrossel.css
@@ -27,7 +27,8 @@
     .carousel-item img {
         object-fit: cover;
         /* width: 100%; */
-        height: 80vh;
+        min-height: 80vh; 
+        max-height: 95vh;
     }
 
     .carousel-control-prev, .carousel-control-next{
