--- a/leisure/src/main/resources/static/style/profile-meusdados.css
+++ b/leisure/src/main/resources/static/style/profile-meusdados.css
@@ -17,6 +17,11 @@
     object-fit: cover;
     width: 50px;
     height: 50px;
+    cursor: pointer;
+}
+
+.meusdados__imagem span {
+    cursor: pointer;
 }
 
 .meusdados__imagem label span {
