--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -8,7 +8,7 @@
                     <i class="fa-light fa-bars fa-xl"></i>
                 </span>
                 <span class="cabecalho__container-logo">
-                    <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis"></a>
+                    <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis" onclick="loading()"></a>
                 </span>
             </label>
 
@@ -30,7 +30,7 @@
                             <span>Categorias <i class="fa-solid fa-sm fa-chevron-right" data-arrow></i></span>
     
                             <ul class="lista-menu__sublista-categoria hidden" data-submenu>
-                                <li class="lista-menu__sublista-item pointer" data-rodape="link">
+                                <li class="lista-menu__sublista-item pointer" data-rodape="link" onclick="loading()">
                                     <span>Apartamentos</span>
                                     <label>
                                         <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
@@ -39,7 +39,7 @@
                                     </label>
                                 </li>
 
-                                <li class="lista-menu__sublista-item pointer" data-rodape="link">
+                                <li class="lista-menu__sublista-item pointer" data-rodape="link" onclick="loading()">
                                     <span>Casas</span>
                                     <label>
                                         <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
@@ -48,7 +48,7 @@
                                     </label>
                                 </li>
 
-                                <li class="lista-menu__sublista-item pointer" data-rodape="link">
+                                <li class="lista-menu__sublista-item pointer" data-rodape="link" onclick="loading()">
                                     <span>Sítios</span>
                                     <label>
                                         <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
@@ -57,7 +57,7 @@
                                     </label>
                                 </li>
 
-                                <li class="lista-menu__sublista-item pointer" data-rodape="link">
+                                <li class="lista-menu__sublista-item pointer" data-rodape="link" onclick="loading()">
                                     <span>Terrenos</span>
                                     <label>
                                         <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
@@ -67,13 +67,13 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="lista-menu__item">
+                        <li class="lista-menu__item" onclick="loading()">
                             <a class="container__link" href="/leisure/premium">Premium</a>
                         </li>
-                        <li class="lista-menu__item">
+                        <li class="lista-menu__item" onclick="loading()">
                             <a class="container__link" href="/usuario/perfil/anunciar">Anunciar</a>
                         </li>
-                        <li class="lista-menu__item">
+                        <li class="lista-menu__item" onclick="loading()">
                             <a class="container__link" href="/leisure/index#contato">Links úteis</a>
                         </li>
                         <li class="lista-menu__item" data-menu>
@@ -120,7 +120,7 @@
                     <i class="fa-light fa-bars fa-xl"></i>
                 </span>
                 <span class="cabecalho__container-logo">
-                    <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis"></a>
+                    <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis" onclick="loading()"></a>
                 </span>
             </label>
         
@@ -139,91 +139,28 @@
                     <p>Seja bem-vindo (a) <span th:text="${usuario.nome}"></span></p>
                 </div>
                 <div class="lista-menu__conteudo">
-                    <li class="lista-menu__item btnAnunciar" sec:authorize="hasAuthority('ROLE_ADMIN')">
+                    <li class="lista-menu__item btnAnunciar" sec:authorize="hasAuthority('ROLE_ADMIN')" onclick="loading()">
                         <a class="container__link btnAnunciar" href="/usuario/perfil/usuarios">
                             <span>ADM</span>
                         </a>
                     </li>
-                <!-- <div class="lista-menu__conteudo"> -->
-                    <li class="lista-menu__item btnAnunciar">
+                    <li class="lista-menu__item btnAnunciar" onclick="loading()">
                         <a class="container__link btnAnunciar" href="/usuario/perfil/anunciar">
                             <span>Anunciar</span>
                         </a>
                     </li>
-                    <li class="lista-menu__item btnMeusAnuncios">
+                    <li class="lista-menu__item btnMeusAnuncios" onclick="loading()">
                         <a class="container__link btnAnunciar" href="/usuario/perfil/anuncio">
                             <span>Meus anúncios</span>
                         </a>
                     </li>
-                    <li class="lista-menu__item btnMeusDados">
+                    <li class="lista-menu__item btnMeusDados" onclick="loading()">
                         <a class="container__link" href="/usuario/perfil/meusdados">
                             <span>Meus dados</span>
                         </a>
                     </li>
                     <div th:replace="~{fragments/botoes :: logout}"></div>
                 </div>
-            </ul>
-        </div>
-    </nav>
-</header>
-
-<!-- CABEÇALHO ADM -->
-<header th:fragment="administrador" class="cabecalho">
-    <nav class="cabecalho__container">
-        <div class="container__hamburguer">
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <span class="container__rotulo">
-                    <i class="fa-light fa-bars fa-xl"></i>
-                </span>
-                <span class="cabecalho__container-logo">
-                    <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis"></a>
-                </span>
-            </label>
-        
-            <ul class="lista-menu">
-                <div class="lista-menu__conteudo">
-                    <li class="lista-menu__item home">
-                        <span class="cabecalho__container-logo">
-                            <a href="/leisure/index"><img src="/img/imagem/logo-leisure.svg" alt="logo leisure imoveis"></a>
-                        </span>
-                        <label for="menu">
-                            <i class="fa-light fa-xmark fa-2xl"></i>
-                        </label>
-                    </li>
-                </div>
-                <div class="cabecalho__container-welcome" th:if="${usuario != null}">
-                    <p>Seja bem-vindo (a) <span th:text="${usuario.nome}"></span></p>
-                </div>
-                <ul class="lista-menu__conteudo">
-                    <li class="lista-menu__item btnAnunciar">
-                        <span>Administrador</span>
-                        <ul class="lista-menu__conteudo__sublista">
-                            <li>
-                                <span>Usuarios cadastrados</span>
-                            </li>
-                            <li>
-                                <span>imoveis cadastrados</span>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="lista-menu__item btnAnunciar">
-                        <a class="container__link btnAnunciar" href="/usuario/perfil/anunciar">
-                            <span>Anunciar</span>
-                        </a>
-                    </li>
-                    <li class="lista-menu__item btnMeusAnuncios">
-                        <a class="container__link btnAnunciar" href="/usuario/perfil/anuncio">
-                            <span>Meus anúncios</span>
-                        </a>
-                    </li>
-                    <li class="lista-menu__item btnMeusDados">
-                        <a class="container__link" href="/usuario/perfil/meusdados">
-                            <span>Meus dados</span>
-                        </a>
-                    </li>
-                    <div th:replace="~{fragments/botoes :: logout}"></div>
-                </ul>
             </ul>
         </div>
     </nav>
