--- a/leisure/src/main/resources/templates/fragments/rodape.html
+++ b/leisure/src/main/resources/templates/fragments/rodape.html
@@ -35,7 +35,7 @@
         </ul>
         <ul class="rodape__conteudo-lista">
             <h3 class="titulo__terceiro">Categorias</h3>
-            <li class="rodape__conteudo-item" data-rodape="link">
+            <li class="rodape__conteudo-item" data-rodape="link" onclick="loading()">
                 <label class="rodape__conteudo-link pointer">
                     <i class="fa-regular fa-building"></i>
                     <span>Apartamentos</span>
@@ -44,7 +44,7 @@
                     </form>
                 </label>
             </li>
-            <li class="rodape__conteudo-item" data-rodape="link">
+            <li class="rodape__conteudo-item" data-rodape="link" onclick="loading()">
                 <label class="rodape__conteudo-link pointer">
                     <i class="fa-regular fa-house"></i>
                     <span>Casas</span>
@@ -53,7 +53,7 @@
                     </form>
                 </label>
             </li>
-            <li class="rodape__conteudo-item" data-rodape="link">
+            <li class="rodape__conteudo-item" data-rodape="link" onclick="loading()">
                 <label class="rodape__conteudo-link pointer">
                     <i class="fa-regular fa-house-tree"></i>
                     <span>Sítios</span>
@@ -62,7 +62,7 @@
                     </form>
                 </label>
             </li>
-            <li class="rodape__conteudo-item" data-rodape="link">
+            <li class="rodape__conteudo-item" data-rodape="link" onclick="loading()">
                 <label class="rodape__conteudo-link pointer">
                     <i class="fa-regular fa-trowel-bricks"></i>
                     <span>Terrenos</span>
@@ -80,12 +80,6 @@
                     <span>E-mail</span>
                 </a>
             </li>
-            <!-- <li class="rodape__conteudo-item">
-                <a href="https://twitter.com" target="_blank" class="rodape__conteudo-link">
-                    <i class="fa-brands fa-x-twitter"></i>
-                    <span>X</span>
-                </a>
-            </li> -->
             <li class="rodape__conteudo-item">
                 <a href="https://instagram.com" target="_blank" class="rodape__conteudo-link">
                     <i class="fa-brands fa-instagram"></i>
