URL de adm configurada

--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="lista-menu__conteudo">
                     <li class="lista-menu__item btnAnunciar" sec:authorize="hasAuthority('ROLE_ADMIN')">
-                        <a class="container__link btnAnunciar" href="/usuario/perfil/usuarios">
+                        <a class="container__link btnAnunciar" href="/adm/index">
                             <span>ADM</span>
                         </a>
                     </li>
