--- a/leisure/src/main/resources/static/style/perfil-carrossel.css
+++ b/leisure/src/main/resources/static/style/perfil-carrossel.css
@@ -1,7 +1,6 @@
-@media screen and (min-width: 768px){
-    .perfil__carrossel {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.perfil__carrossel {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
