--- a/leisure/src/main/resources/static/style/profile-anunciar.css
+++ b/leisure/src/main/resources/static/style/profile-anunciar.css
@@ -26,10 +26,30 @@
     justify-content: center;
 }
 .anunciar__conteudo__box__animacao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin: 30px 0 30px 0;
     font-size: 5em;
 }
+
+.anunciar__conteudo__box__animacao label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.anunciar__conteudo__box__animacao label i {
+    text-align: center;
+}
+
+.anunciar__conteudo__box__animacao label img {
+    width: 75%;
+    border-radius: 5px;
+}
+
 .anunciar__conteudo__box p{
     text-align: center;
     position: relative;
@@ -51,7 +71,6 @@
     margin-top: 15px;
     border: 0;
     border-bottom: 1px solid lightgray;
-    /* box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5); */
     outline: none;
     background: transparent;
 }
@@ -85,8 +104,8 @@
     background: var(--cor-font-destaque);
     color: white;
 }
-.disable{
-    display: none;
+.disabled {
+    background: gray !important;
 }
 .anunciar__conteudo__botao-proximo{
     width: 110px;
@@ -109,9 +128,6 @@
     width: 100%;
 }
 
-/* #form2, #form3, #form4, #form5, #form6, #form7, #form8, #form9, #form10, #form11, #form12, #form13, #form14{
-    left: 450px;
-} */
 [data-profile="anunciar"] {
     left: 450px;
 }
@@ -140,7 +156,6 @@
     height: 40px;
     margin: 0 auto;
     align-items: center;
-    /* box-shadow: 0 -1px 5px -1px #000; */
     position: relative;
 }
 .anunciar__conteudo__progresso-coluna{
