--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -1,6 +1,9 @@
 <!-- PERFIL -->
 <section th:fragment="perfil">
     <section class="perfil__carrossel">
+        <div class="cabecalho__container-welcome" th:if="${usuario != null}">
+            <p>Seja bem-vindo (a) <span th:text="${usuario.nome}"></span></p>
+        </div>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
@@ -38,14 +41,14 @@
                 <i class="fa-thin fa-house-building"></i>
             </div>
             <p>Qual é o tipo de imóvel que você deseja anunciar?</p>
-            <select class="anunciar__conteudo__selecao" name="tipo" id="imovelTipo" data-profile="question">
+            <select class="anunciar__conteudo__selecao" name="tipo" id="imovelTipo">
                 <option class="anunciar__conteudo__selecao-opcao" value="apartamento">Apartamento</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="casa">Casa</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="sitio">Sitío</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="terreno">Terreno</option>
             </select>
             <div class="anunciar__conteudo__botao">
-                <button class="anunciar__conteudo__botao-anterior disable" type="button">Anterior</button>
+                <button class="anunciar__conteudo__botao-anterior" type="button" hidden>Anterior</button>
                 <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
             </div>
         </div>
@@ -57,7 +60,7 @@
                 <i class="fa-thin fa-face-thinking"></i>
             </div>
             <p>Em qual área o seu imóvel está situado?</p>
-            <select class="anunciar__conteudo__selecao" name="imovelLocal" id="imovelLocal" data-profile="question">
+            <select class="anunciar__conteudo__selecao" name="imovelLocal" id="imovelLocal">
                 <option class="anunciar__conteudo__selecao-opcao" value="areaLivre">Área livre</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="condominio">Condominio</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="rural">Rural</option>
@@ -77,7 +80,7 @@
                 <i class="fa-thin fa-seedling"></i>
             </div>
             <p>O imóvel possui algum tipo de recurso sustentável?</p>
-            <select class="anunciar__conteudo__selecao" name="sustentabilidade" id="imovelSustentavel" data-profile="question">
+            <select class="anunciar__conteudo__selecao" name="sustentabilidade" id="imovelSustentavel">
                 <option class="anunciar__conteudo__selecao-opcao" value="solar">Energia solar</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="chuva">Captação de água da chuva</option>
                 <option class="anunciar__conteudo__selecao-opcao" value="led">Lâmpadas led</option>
@@ -101,7 +104,7 @@
             <input class="anunciar__conteudo__input" type="text" name="area" id="anunciarSala" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -115,7 +118,7 @@
             <input class="anunciar__conteudo__input" type="text" name="numQuartos" id="anunciarQuarto" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -129,7 +132,7 @@
             <input class="anunciar__conteudo__input" type="text" name="numBanheiros" id="anunciarBanheiro" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -143,21 +146,9 @@
             <input class="anunciar__conteudo__input" type="text" name="vagasGaragem" id="anunciarVaga" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
-
-        <!-- QUASE TERMINANDO -->
-        <!-- <div class="anunciar__conteudo__box" data-profile="anunciar">
-            <h3 class="titulo__terceiro">Estamos quase terminando...</h3>
-            <div class="anunciar__conteudo__box__animacao">
-                <i class="fa-thin fa-face-laugh-squint"></i>
-            </div>
-            <div class="anunciar__conteudo__botao">
-                <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
-            </div>
-        </div> -->
 
         <!-- ENDEREÇO DO IMOVEL -->
         <div class="anunciar__conteudo__box" data-profile="anunciar">
@@ -185,8 +176,8 @@
                 <input class="anunciar__conteudo__input" name="rua" type="text" id="rua" required data-anunciar="endereco"/>
             </div>
             <div class="anunciar__conteudo__botao">
-                <button class="anunciar__conteudo__botao-anterior anterior8" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo proximo9" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -199,7 +190,7 @@
             <p>Fale mais sobre o imóvel que deseja anunciar</p>
             <textarea class="anunciar__conteudo__input descricao" name="descricao" id="anuciarDescricao" cols="30"
                 rows="10"
-                placeholder="digite detalhes sobre seu imóvel que seja relevante para a sua venda." data-profile="question"></textarea>
+                placeholder="digite detalhes sobre seu imóvel que seja relevante para a sua venda."></textarea>
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
                 <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
@@ -213,10 +204,10 @@
                 <i class="fa-thin fa-house"></i>
             </div>
             <p>Qual o valor do IPTU anual do imovel?</p>
-            <input class="anunciar__conteudo__input" type="text" name="iptu" placeholder="500,00" required data-profile="question">
+            <input class="anunciar__conteudo__input" type="text" name="iptu" placeholder="R$" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -227,10 +218,10 @@
                 <i class="fa-thin fa-tags"></i>
             </div>
             <p>Digite o valor que deseja vender seu imóvel</p>
-            <input class="anunciar__conteudo__input" type="text" name="preco" placeholder="200000,00" required data-profile="question">
+            <input class="anunciar__conteudo__input" type="text" name="preco" placeholder="R$" required data-profile="question">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
+                <button class="anunciar__conteudo__botao-proximo disabled" disabled type="button" data-profile="btnProximo">Próximo</button>
             </div>
         </div>
 
@@ -240,44 +231,23 @@
             <div class="anunciar__conteudo__box__animacao">
                 <label for="imovelImagem">
                     <i class="fa-thin fa-image"></i>
+                    <img id="imagemPreview" src="" alt="">
                 </label>
             </div>
             <p>Envie a melhor foto que você possui do seu imóvel</p>
             <input class="anunciar__conteudo__input hidden" type="file" accept="image/jpg, image/jpeg, image/png"
-                id="imovelImagem" name="file" data-profile="question">
+                id="imovelImagem" name="file" data-profile="questionImage">
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Concluir</button>
+                <button class="anunciar__conteudo__botao-proximo btnAnunciarSubmit disabled" disabled type="button" data-profile="btnImageProximo" >Concluir</button>
             </div>
         </div>
-
-        <!-- CONFIRMAÇÃO DO ANUNCIO -->
-        <!-- <div class="anunciar__conteudo__box" data-profile="anunciar">
-            <h3 class="titulo__terceiro">Deseja confirmar o seu anuncios?</h3>
-            <div class="anunciar__conteudo__box__animacao">
-                <i class="fa-sharp fa-thin fa-question"></i>
-            </div> -->
-            <!-- <label>
-                <input class="" type="checkbox" name="" required>
-                <p>Confirmo que todos os dados fornecidos são verdadeiros.</p>
-            </label> -->
-            
-            <!-- <div class="anunciar__conteudo__botao">
-                <button class="anunciar__conteudo__botao-anterior" type="button">Anterior</button>
-                <button class="anunciar__conteudo__botao-proximo" type="button">Próximo</button>
-            </div>
-        </div> -->
 
         <!-- FINALIZAÇÃO -->
         <div class="anunciar__conteudo__box" data-profile="anunciar">
             <h3 class="titulo__terceiro">Parabéns! Seu anuncio foi criado</h3>
             <div class="anunciar__conteudo__box__imagem">
                 <img src="/img/imagem/congrat.gif" alt="Parabéns">
-            </div>
-            <div class="anunciar__conteudo__botao">
-                <button type="submit">
-                    <span>Concluir</span>
-                </button>
             </div>
         </div>
     </form>
@@ -295,14 +265,14 @@
         <div class="anuncio__card">
             <ul class="anuncio__card__lista">
                 <form th:action="@{/usuario/perfil/salvar-foto}" method="post" enctype="multipart/form-data">
-                <li>
-                    <label for="input-file">
-                        <img class="anuncio__card__lista__imagem" th:src="|http://localhost:8080/usuario/perfil/imovel/imagem/${imovel.id}|">
-                        <input class="anunciar__conteudo__input hidden" type="file" accept="image/jpg, image/jpeg, image/png"
-                        id="input-file" name="file">
-                    </label>
-                </li>
-            </form>
+                    <li>
+                        <label for="input-file">
+                            <img class="anuncio__card__lista__imagem" th:src="|http://localhost:8080/usuario/perfil/imovel/imagem/${imovel.id}|">
+                            <input class="anunciar__conteudo__input hidden" type="file" accept="image/jpg, image/jpeg, image/png"
+                            id="input-file" name="file">
+                        </label>
+                    </li>
+                </form>
                 <ul class="anuncio__card__form">
                     <li class="anuncio__card__conteudo">
                         <p class="anuncio__card__conteudo__titulo">Tipo: </p>
@@ -476,7 +446,6 @@
 
 <!-- IMOVEIS -->
 <th:block th:fragment="imoveis">
-    <!-- <section class="imoveis" th:if="${imovelPorId.size != 0}" th:each="imovel : ${imovelPorId}"> -->
         <table>
             <thead class="imoveis__tabela__cabeca">
                 <tr>
