--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -73,7 +73,7 @@
                         <li class="lista-menu__item" onclick="loading()">
                             <a class="container__link" href="/usuario/perfil/anunciar">Anunciar</a>
                         </li>
-                        <li class="lista-menu__item" onclick="loading()">
+                        <li class="lista-menu__item">
                             <a class="container__link" href="/leisure/index#contato">Links úteis</a>
                         </li>
                         <li class="lista-menu__item" data-menu>
