Correção do input telefone e do método no RoleRepository

--- a/leisure/src/main/resources/templates/LoginCadastro.html
+++ b/leisure/src/main/resources/templates/LoginCadastro.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="cadastro__container__conteudo">
                         <label for="dadoTelefone">Telefone</label>
-                        <input type="text" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: " minlength="11" maxlength="15" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone" pattern="\d*">
+                        <input type="text" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: " minlength="14" maxlength="14" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone">
                         <span id="telefone-feedback" class="feedback"></span>
                     </div>
                     <div class="cadastro__container__conteudo">
